# CardsCasino

./: .env  .env.dev  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  admin.py  alembic.ini  app.py  bot.py  client_api.py  config.py  docker-compose.yml  flask_admin.py  flask_app.py  game.db  models.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_dev.yml
admin_routes/: __init__.py  bets_stats.py  cashout.py  create_round.py  deposit.py  home.py  required.py
alembic/: env.py
api/: __init__.py  game_api.py  round_api.py  user_api.py
app/api/: __init__.py  bets_api.py  cashout_api.py  deposit_api.py  game_api.py  round_api.py  user_api.py
app/api/schemas/: __init__.py  bets.py  cashout.py  deposit.py  game.py  user.py
app/db/: create_db.py  session.py
app/models/: __init__.py  awards.py  bet.py  card.py  cashout_request.py  deposit_request.py  referal_stats.py  referral_bonus.py  round.py  round_stats.py  token.py  user.py  user_result.py
app/services/: __init__.py  awards_service.py  bet_service.py  card_service.py  cashout_service.py  deposit_service.py  referal_bonus_service.py  referal_stats_service.py  round_service.py  round_stats_service.py  token_service.py  user_service.py
app/utils/: admin.py  rewards.py  users.py
cards_casino/common/: config.py
cards_casino/infrastructure/database/: tables.py
cards_casino/presentors/bot/: bot.py
cards_casino/presentors/rest/: admin.py  app.py
cards_casino/templates/pages/: base.html  game.html  index.html
models/: __init__.py  card.py  referal_stats.py  referral_bonus.py  round_stats.py  token.py  user.py
services/: __init__.py  rewards.py  users.py
static/css/: style.css  styles.css
templates/: base.html  test.html
templates/admin/: bets_stats.html  cashouts.html  deposits.html  home.html  login.html  round_form.html
templates/pages/: game.html  index.html
