[tool.poetry]
name = "tusikandtuzik"
version = "0.1.1"
description = ""
authors = ["ernest <deadindog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.0"
sqlalchemy = "2.0.35"
pydantic = "2.8.2"
typing_extencions = "4.12.2"
alembic = "1.13.2"
aiogram = "3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
