[tool.poetry]
name = "tusikandtuzik"
version = "0.1.1"
description = ""
authors = ["ernest <deadindog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "0.115.0"
sqlalchemy = "2.0.35"
pydantic = "2.8.2"
alembic = "1.13.2"
aiogram = "3.13.0"
uvicorn = "0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Команда для выполнения миграций
migrate = "alembic upgrade head"
# Команда для запуска базы данных через Docker
run-db = "docker-compose up db"
# Команда для остановки базы данных через Docker
stop-db = "docker-compose down db"
# Команда для запуска приложения с FastAPI и ботом
run-all = "docker-compose up --build -d"
